--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -5,22 +5,22 @@ NEW,,,"#610621","#4243c5","((Texto de exemplo para escolher diálogos))\n((Texto
 NEW,,,"#1f1acc","#69893d","Dia XX - Local de Teste"
 NEW,,,"#c6d8fd","#a2f798","???: Saudações, aventureire."
 NEW,,,"#e324cd","#149062","???: Tudo na paz?"
-NEW,,,"#d34bfa","#150104","???: Você tá na minha mesma vibe?"
-NEW,,,"#7fd5e4","#a7ce97","???: Acorda aí."
+NEW,,,"#d34bfa","#150104","???: Pera, você ainda tá dormindo?"
+NEW,,,"#7fd5e4","#a7ce97","???: Acorda aí, pô."
 NEW,,,"#7cd864","#cd0bcc","???: É hora de brilhar!"
 NEW,,,"#ce807b","#64a917","YOU: Ugh..."
-NEW,,,"#d7b82c","#b08359","Você acorda no meio de um sonho\nbizarro sobre cogumelos falantes."
+NEW,,,"#d7b82c","#b08359","Você acorda no meio de um sonho bizarro sobre cogumelos falantes."
 NEW,,,"#6e4123","#d2637e","Parece que seu despertador onírico não tocou..."
 NEW,,,"#3009e7","#b628ae","Seu colega de quarto, Maple, te acorda."
 NEW,,,"#79ceda","#a6df4b","MAPLE: Uau, finalmente! Como você dorme tanto?!"
 NEW,,,"#c31ed1","#79f12a","MAPLE: Não que eu seja exemplo..."
-NEW,,,"#966273","#c81df1","MAPLE: Mas afinal. Você não deveria\neestar na aula? Já são 8h40..."
-NEW,,,"#d82166","#fb26f8","YOU: Ahh--! Maple... estou atrasade!"
+NEW,,,"#966273","#c81df1","MAPLE: Mas afinal. Você não deveria estar na aula? Já são 8h40..."
+NEW,,,"#d82166","#fb26f8","YOU: Ahh...! Maple... estou atrasade!"
 NEW,,,"#38e002","#874a6f","MAPLE: Bem, é o seu primeiro dia. Ouch."
 NEW,,,"#32479d","#4f2c1f","MAPLE: Não quero ser o diabinho no seu ombro, mas..."
 NEW,,,"#08cb14","#c871e8","MAPLE: Você bem que podia matar essa aula."
-NEW,,,"#4acc9c","#3c805d","MAPLE: E ao invés disso, vamos comer\numas plantas e vegetais. Nham."
-NEW,,,"#0ce9bb","#3082d0","Na pressa do universo,\nvocê se prepara para sair."
+NEW,,,"#4acc9c","#3c805d","MAPLE: E ao invés disso, vamos comer umas plantas e vegetais. Nham."
+NEW,,,"#0ce9bb","#3082d0","Na maior pressa, você se prepara para sair."
 NEW,,,"#3c677a","#708d4b","Você sente uma tontura súbita."
-NEW,,,"#12b01e","#52db44","Você não faz ideia de onde está,\nnem quem diabos é Maple..."
-NEW,,,"#2a38ed","#fb1e46","Acho que, ao invés de questionar o absurdo\nde tudo isso, você apenas aceita..."
+NEW,,,"#12b01e","#52db44","Você não faz ideia de onde está, nem quem diabos é Maple..."
+NEW,,,"#2a38ed","#fb1e46","Acho que, ao invés de questionar o absurdo de tudo isso, você apenas aceita..."
