--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -1,21 +1,21 @@
 Status,File,Node,Line ID,Hash,Text
 ,"scenes/main_day0_test.yarn",,,,
 ,,"Start",,,
-NEW,,,"#610621","#4243c5","((Texto de exemplo para escolher diálogos))\n((Texto de exemplo para confirmar))"
-NEW,,,"#1f1acc","#69893d","Dia XX - Local de Teste"
+NEW,,,"#610621","#4243c5","(Texto de exemplo para escolher diálogos)\n(Texto de exemplo para confirmar)"
+NEW,,,"#1f1acc","#69893d","Dia Teste - Local de Teste"
 NEW,,,"#c6d8fd","#a2f798","???: Saudações, aventureire."
 NEW,,,"#e324cd","#149062","???: Tudo na paz?"
 NEW,,,"#d34bfa","#150104","???: Pera, você ainda tá dormindo?"
-NEW,,,"#7fd5e4","#a7ce97","???: Acorda aí, pô."
-NEW,,,"#7cd864","#cd0bcc","???: É hora de brilhar!"
-NEW,,,"#ce807b","#64a917","YOU: Ugh..."
+NEW,,,"#7fd5e4","#a7ce97","???: ..."
+NEW,,,"#7cd864","#cd0bcc","???: [wave]É hora de brilhar![/]"
+NEW,,,"#ce807b","#64a917","PLAYER: Ugh..."
 NEW,,,"#d7b82c","#b08359","Você acorda no meio de um sonho bizarro sobre cogumelos falantes."
-NEW,,,"#6e4123","#d2637e","Parece que seu despertador onírico não tocou..."
+NEW,,,"#6e4123","#d2637e","Parece que seu despertador não tocou..."
 NEW,,,"#3009e7","#b628ae","Seu colega de quarto, Maple, te acorda."
 NEW,,,"#79ceda","#a6df4b","MAPLE: Uau, finalmente! Como você dorme tanto?!"
 NEW,,,"#c31ed1","#79f12a","MAPLE: Não que eu seja exemplo..."
-NEW,,,"#966273","#c81df1","MAPLE: Mas afinal. Você não deveria estar na aula? Já são 8h40..."
-NEW,,,"#d82166","#fb26f8","YOU: Ahh...! Maple... estou atrasade!"
+NEW,,,"#966273","#c81df1","MAPLE: Afinal, você não deveria estar na aula? Já são 8h40..."
+NEW,,,"#d82166","#fb26f8","PLAYER: Ahh...! Maple... Estou atrasade!"
 NEW,,,"#38e002","#874a6f","MAPLE: Bem, é o seu primeiro dia. Ouch."
 NEW,,,"#32479d","#4f2c1f","MAPLE: Não quero ser o diabinho no seu ombro, mas..."
 NEW,,,"#08cb14","#c871e8","MAPLE: Você bem que podia matar essa aula."
