New chatterbox functions & remove blossom metadata

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -2,7 +2,7 @@ Status,File,Node,Line ID,Hash,Text
 ,"scenes/main_day0_test.yarn",,,,
 ,,"Start",,,
 NEW,,,"#610621","#4243c5","(Texto de exemplo para escolher diálogos)\n(Texto de exemplo para confirmar)"
-NEW,,,"#1f1acc","#69893d","Dia Teste - Local de Teste"
+NEW,,,"#1f1acc","#69893d","Dia 0 - Local de Teste"
 NEW,,,"#c6d8fd","#a2f798","???: Saudações, aventureire."
 NEW,,,"#e324cd","#149062","???: Tudo na paz?"
 NEW,,,"#d34bfa","#150104","???: Pera, você ainda tá dormindo?"
