Build csv for localization

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -1,26 +1,198 @@
 Status,File,Node,Line ID,Hash,Text
 ,"scenes/main_day0_test.yarn",,,,
-,,"Start",,,
-NEW,,,"#610621","#4243c5","(Texto de exemplo para escolher diálogos)\n(Texto de exemplo para confirmar)"
-NEW,,,"#1f1acc","#69893d","Dia 0 - Local de Teste"
-NEW,,,"#c6d8fd","#a2f798","???: Saudações, aventureire."
-NEW,,,"#e324cd","#149062","???: Tudo na paz?"
-NEW,,,"#d34bfa","#150104","???: Pera, você ainda tá dormindo?"
+,,"Morning",,,
+NEW,,,"#610621","#9b0733","(Placeholder text for choosing dialogues)\n(Placeholder text for confirming)"
+NEW,,,"#1f1acc","#69893d","Test Day - Test Locality"
+NEW,,,"#c6d8fd","#a2f798","???: Greetings, adventurer."
+NEW,,,"#e324cd","#150104","???: Do you catch my drift?"
+NEW,,,"#d34bfa","#64d97f","???: Can you please wake up?"
 NEW,,,"#7fd5e4","#a7ce97","???: ..."
-NEW,,,"#7cd864","#cd0bcc","???: [wave]É hora de brilhar![/]"
-NEW,,,"#ce807b","#64a917","PLAYER: Ugh..."
-NEW,,,"#d7b82c","#b08359","Você acorda no meio de um sonho bizarro sobre cogumelos falantes."
-NEW,,,"#6e4123","#d2637e","Parece que seu despertador não tocou..."
-NEW,,,"#3009e7","#b628ae","Seu colega de quarto, Maple, te acorda."
-NEW,,,"#79ceda","#a6df4b","MAPLE: Uau, finalmente! Como você dorme tanto?!"
-NEW,,,"#c31ed1","#79f12a","MAPLE: Não que eu seja exemplo..."
-NEW,,,"#966273","#c81df1","MAPLE: Afinal, você não deveria estar na aula? Já são 8h40..."
-NEW,,,"#d82166","#fb26f8","PLAYER: Ahh...! Maple... Estou atrasade!"
-NEW,,,"#38e002","#874a6f","MAPLE: Bem, é o seu primeiro dia. Ouch."
-NEW,,,"#32479d","#4f2c1f","MAPLE: Não quero ser o diabinho no seu ombro, mas..."
-NEW,,,"#08cb14","#c871e8","MAPLE: Você bem que podia matar essa aula."
-NEW,,,"#4acc9c","#3c805d","MAPLE: E ao invés disso, vamos comer umas plantas e vegetais. Nham."
-NEW,,,"#0ce9bb","#3082d0","Na maior pressa, você se prepara para sair."
-NEW,,,"#3c677a","#708d4b","Você sente uma tontura súbita."
-NEW,,,"#12b01e","#52db44","Você não faz ideia de onde está, nem quem diabos é Maple..."
-NEW,,,"#2a38ed","#fb1e46","Acho que, ao invés de questionar o absurdo de tudo isso, você apenas aceita..."
+NEW,,,"#7cd864","#4457a4","???: [wave]Rise and shine![/]"
+NEW,,,"#ce807b","#cd3f5f","PLAYER: Ugh..."
+NEW,,,"#d7b82c","#7d0a63","You wake up in the middle of a bizarre dream about talking mushrooms."
+NEW,,,"#6e4123","#998e5d","It seems your alarm didn't go off..."
+NEW,,,"#3009e7","#b628ae","Your roommate, Maple, wakes you up."
+NEW,,,"#79ceda","#a6df4b","MAPLE: Wow, finally! How can you sleep so much?!"
+NEW,,,"#c31ed1","#79f12a","MAPLE: Not that I'm one to speak..."
+NEW,,,"#966273","#aa6931","MAPLE: Aren't you supposed to be in class? It's already 8:40..."
+NEW,,,"#d82166","#b9f17e","PLAYER: Ahh...! Maple... I'm late!"
+NEW,,,"#38e002","#874a6f","MAPLE: Well, it's your first day. Ouch."
+NEW,,,"#32479d","#4f2c1f","MAPLE: Not to be the devil on your ear but..."
+NEW,,,"#08cb14","#c871e8","MAPLE: You might as well just skip that class."
+NEW,,,"#4acc9c","#3c805d","MAPLE: Let's eat some plants and vegetables instead."
+NEW,,,"#0ce9bb","#16e844","In a rush, you get ready to leave."
+NEW,,,"#3c677a","#708d4b","You feel dizzy."
+NEW,,,"#12b01e","#cc5b54","You have no idea where you are, or who the hell is Maple..."
+NEW,,,"#2a38ed","#83aa75","I guess, instead of questioning the absurdity of it all, you just roll with that..."
+,"scenes/main_day1_boat_departure.yarn",,,,
+,,"Morning",,,
+NEW,,,"#8e8e71","#d15942","(You sit on one of the benches of the boat and finally relax a bit.)"
+NEW,,,"#b95050","#3bd702","(Your mind goes back to the dream you had before Caru woke you up.)"
+NEW,,,"#93e669","#afa8e6","PLAYER: (You know, I've been having these strange dreams since I got here.)"
+NEW,,,"#24ccd5","#a80c14","PLAYER: (It's like I...)"
+NEW,,,"#31f647","#a80c14","PLAYER: (It's like I...)"
+NEW,,,"#34f916","#916a37","(... feel different.)"
+NEW,,,"#b0eb2e","#a83f71","(... am forgetting who I am.)"
+NEW,,,"#946fec","#a982ad","PLAYER: (To tell the truth, I don't know why I came here.)"
+NEW,,,"#c55ee5","#dfb5b0","PLAYER: (Hmm, okay. Actually, I do know.)"
+NEW,,,"#fb09c6","#e0b07d","PLAYER: (I was lost. Purposeless. Unwilling to accept that I need to choose something.)"
+NEW,,,"#097d77","#a1f860","PLAYER: (Adulthood has barely begun, and I already feel so tired.)"
+NEW,,,"#7c3069","#f3d6c3","PLAYER: (But escaping from my routine was all I wanted.)"
+NEW,,,"#bb0a3e","#89dd1a","PLAYER: (To bet on something new, different.)"
+NEW,,,"#c7f467","#833ee8","PLAYER: (That's what they say university means for some, right?)"
+NEW,,,"#b65c62","#1ab64d","PLAYER: (Rediscovery.)"
+NEW,,,"#b0b658","#10b209","PLAYER: (I'm here for that. Or at least, to try.)"
+NEW,,,"#e1df51","#d5f238","PLAYER: (Not that school was bad for me, but it wasn't anything special either, you know?)"
+NEW,,,"#0d0623","#f3c2f0","PLAYER: (...)"
+NEW,,,"#7dfa0a","#4504ea","PLAYER: (Okay, that was quite emotional for it not to be even 7:10 in the morning.)"
+NEW,,,"#6fb559","#ac3018","PLAYER: (This journey has just begun, let's try to think positive!)"
+,,"Noon",,,
+NEW,,,"#198955","#2470dc","Noon"
+,,"Afternoon",,,
+NEW,,,"#3f1b4d","#432faa","Afternoon"
+,,"Night",,,
+NEW,,,"#d52f7b","#1d14c8","Night"
+,"scenes/main_day1_dormitory.yarn",,,,
+,,"Morning",,,
+NEW,,,"#361a6b","#94e1b5","..."
+NEW,,,"#af98ad","#699810","The rule says you can't run in the hallways..."
+NEW,,,"#ddf6ae","#b7b586","So you quicken your pace until you reach the entrance."
+NEW,,,"#bb92f9","#81ea7b","In the distance, you can see the boat that just left."
+NEW,,,"#36b3dd","#ab4e21","MR. ORANGE: Hey. Are you a morning student?"
+NEW,,,"#9df643","#9049a7","PLAYER: Yes, I am!"
+NEW,,,"#2ad4fa","#0d86d2","MR. ORANGE: The second boat has already left, but a third one is coming shortly."
+NEW,,,"#1832df","#c25309","PLAYER: Oh, thank goodness there's a third one. I thought I was lost!"
+NEW,,,"#42c368","#f3d217","MR. ORANGE: Haha! Don't worry, young one!"
+NEW,,,"#095ff8","#33ec7a","MR. ORANGE: In addition to the third, there's also a fourth, a fifth... and so on."
+NEW,,,"#39766b","#98eeb8","MR. ORANGE: The next one is coming in 5 minutes!"
+NEW,,,"#3f282d","#550d3d","As he says this, some other students are arriving at the spot, realizing they also missed the boat."
+NEW,,,"#80e45e","#ac6826","PLAYER: At least I'm not the only one."
+NEW,,,"#795881","#9791c7","PLAYER: You saved me here, Mr...?"
+NEW,,,"#fc76c4","#d2e478","MR. ORANGE: They call me Orange, young one."
+NEW,,,"#a7a29f","#08fe9d","PLAYER: I'm PLAYER."
+NEW,,,"#e18a27","#69c452","You only have to wait... What do you do now?"
+NEW,,,"#83d7e5","#69c452","You only have to wait... What do you do now?"
+NEW,,,"#1ecdd9","#726646","Talk to Mr. Orange."
+NEW,,,"#416827","#5e28b8","(YOU JUST EARNED A BONUS ACTION![spr_action])[snd_click1]"
+NEW,,,"#bae562","#1e6079","You have to wait anyway; it's better to talk to someone to pass the time."
+NEW,,,"#c20819","#eac974","PLAYER: Not to be <intrusive>, but it's quite a coincidence that your name is the same as the dormitory."
+NEW,,,"#3ffdcf","#82423a","MR. ORANGE: Haha! That's not a coincidence, young one! I've been the supervisor of this dormitory since it was built."
+NEW,,,"#14c3e7","#9676f8","PLAYER: But that was, like, a long time ago, right?"
+NEW,,,"#72266d","#731266","PLAYER: (Oh my god, I called him old)."
+NEW,,,"#9485a0","#dc309d","MR. ORANGE: HAHA! It's only been 25 years!"
+NEW,,,"#d77901","#928ea3","PLAYER: That means you've met all the famous plants, right?"
+NEW,,,"#58fd6b","#677da3","PLAYER: Even Tony Ramos, who graduated a few years ago?"
+NEW,,,"#b7124f","#4c74c7","MR. ORANGE: Each one of them! I have a collection of photos with the students who became famous from the college."
+NEW,,,"#5c3359","#cc65b2","MR. ORANGE: I can show you the collection one day if you want!"
+NEW,,,"#7d9936","#389b17","PLAYER: I'd love that!"
+NEW,,,"#5d8af0","#af0354","MR. ORANGE: I like your enthusiasm, young one!"
+NEW,,,"#82b546","#40a02e","MR. ORANGE: But you better start going. The boat is arriving."
+NEW,,,"#f42612","#693366","Mr. Orange points to the boat approaching outside."
+NEW,,,"#01b874","#807729","PLAYER: See you later, Mr. Orange!"
+NEW,,,"#06f5f5","#8a5a7b","You wave to him as you leave the dormitory, heading towards the boat."
+NEW,,,"#5b1185","#7cc585","Wait for the boat outside."
+NEW,,,"#00912c","#69336c","It's better to make sure you don't miss the third boat."
+NEW,,,"#ccca5b","#837d71","You go outside the building, sitting on one of the waiting benches for the boat."
+NEW,,,"#65794c","#0d622e","There's a girl drawing on one of the other benches."
+NEW,,,"#c51c4b","#bb57ff","You try to see what she's drawing and ends up impressed with the replica of the lake she was creating."
+NEW,,,"#32cbd1","#7e094b","Try to talk to her."
+NEW,,,"#370ddb","#a03db2","PLAYER: Wow, your drawing is beautiful!"
+NEW,,,"#69998f","#a7ce97","???: ..."
+NEW,,,"#22357e","#4323ea","She doesn't even blink, continuing to focus on the notebook."
+NEW,,,"#769faf","#ef1f7b","It's as if she didn't hear you from being so concentrated..."
+NEW,,,"#0c8428","#436f4f","You decide to appreciate the lake alongside her, even if in silence."
+NEW,,,"#1012d5","#a7f650","Just admire the drawing she's doing."
+NEW,,,"#5092f9","#5e28b8","(YOU JUST EARNED A BONUS ACTION![spr_action])[snd_click1]"
+NEW,,,"#72e405","#ba92b2","You can't take your eyes off the drawing."
+NEW,,,"#df7bd3","#bb9928","To the point that the girl gives you a quick look with raised eyebrows."
+NEW,,,"#2b1dd7","#c44920","You look away, feeling your face heat up for getting <caught>."
+NEW,,,"#52962f","#94c0d1","Soon, the third boat starts to approach."
+NEW,,,"#c83b07","#943cc7","PLAYER: (Thank goodness everything worked out...)"
+NEW,,,"#dc01da","#b7121f","You board the boat."
+,,"Noon",,,
+NEW,,,"#d0ab94","#2470dc","Noon"
+,,"Afternoon",,,
+NEW,,,"#069bb3","#7113fa","LOREM IPSUM"
+,,"Night",,,
+,"scenes/main_day1_dormroom.yarn",,,,
+,,"Morning",,,
+NEW,,,"#1e3ff3","#94e1b5","..."
+NEW,,,"#da1f8b","#219ae2","???: Hey."
+NEW,,,"#23e124","#453e3e","???: Heeey!"
+NEW,,,"#28b531","#2cc32a","???: Are you listening?"
+NEW,,,"#f5b9a9","#a7ce97","???: ..."
+NEW,,,"#5be548","#65dd94","???: Wake up!"
+NEW,,,"#850375","#cd3f5f","PLAYER: Ugh..."
+NEW,,,"#d58fe3","#51164b","???: Time to get up, sleepyhead!"
+NEW,,,"#3b26df","#c90408","???: It's a new day full of adventure, and... Oh, hold on, I think you're late!"
+NEW,,,"#baf757","#423128","You groan and rub your eyes, trying to understand the situation."
+NEW,,,"#1f91d5","#51922f","It seems like your alarm didn't go off..."
+NEW,,,"#ca02fd","#5a70bd","The one waking you up is your roommate, Mandacaru. But everyone calls him Caru, his nickname."
+NEW,,,"#adf0ed","#e65cde","PLAYER: What time is it?"
+NEW,,,"#2278c0","#a63be9","CARU: Let me tell you, you overslept, PLAYER."
+NEW,,,"#d433df","#ae9640","CARU: The sun is already high in the sky, and the birds are mocking you."
+NEW,,,"#ccd329","#b75621","CARU: And I was the universe's envoy to deliver you a memorandum with punctuality sermons."
+NEW,,,"#74f4de","#2b2b7f","PLAYER: Wait, what?? What does that mean?"
+NEW,,,"#2be4d7","#142ea1","You hurry with the choice of clothes, and in a clumsy manner, try to dress in record time."
+NEW,,,"#774550","#137650","PLAYER: Tch. Thanks for the heads up, master of wizards. I just asked for the time!"
+NEW,,,"#30b5af","#fdfb4b","CARU: I'm exaggerating, haha. It's only 6:40... Your alarm hasn't gone off yet."
+NEW,,,"#7959e9","#924cd2","PLAYER: Ah! You rascal."
+NEW,,,"#753014","#6d343f","You were really getting desperate here. Caru and his limitless teasing..."
+NEW,,,"#d06990","#fbc47b","CARU: Life is a race, and you've already started running! You'll thank me later, haha."
+NEW,,,"#acdf43","#76287f","CARU: But now, I'm serious. The first day is not one of those you want to be late for."
+NEW,,,"#1dd87f","#13fa94","CARU: The earlier you leave, the better!"
+NEW,,,"#f2cb8c","#825ae5","CARU: Some of the Lotus professors can be real tyrants."
+NEW,,,"#a61151","#17f9af","PLAYER: I've been questioning the sadism of those who decided on the 7:30 am schedule for morning classes from the start..."
+NEW,,,"#2b3bb1","#8568f9","Despite Mandacaru's warning, by the time you gather all the materials for classes, you see that time is still ticking away."
+NEW,,,"#8cf063","#93e668","Part of you curses your last night's self, who confidently claimed there would be enough time to get organized in the morning."
+NEW,,,"#d53c5c","#ec502d","Being ready to go, you head downstairs to the dormitory."
+NEW,,,"#fb9c05","#d61861","title: Noon"
+NEW,,,"#748dd5","#c176b0","---"
+NEW,,,"#240371","#2470dc","Noon"
+,,"Afternoon",,,
+NEW,,,"#41be83","#432faa","Afternoon"
+,,"Night",,,
+NEW,,,"#66d263","#1d14c8","Night"
+,"scenes/main_day1_school.yarn",,,,
+,,"Morning",,,
+,,"AfterClass",,,
+NEW,,,"#c8d7db","#ef68af","PLAYER: Então, como você quer fazer o trabalho?"
+NEW,,,"#5eceea","#c7dc0d","IPÊ: Eu ia te perguntar a mesma coisa, haha..."
+NEW,,,"#5b212e","#1ba3d4","PLAYER: Vamos revisar o que é pra fazer primeiro..."
+NEW,,,"#f3256c","#95349c","PLAYER: Ele falou pra gente encontrar no campus pelo menos 2 espécies diferentes de animais plantae que estejam em algum tipo de relação ecológica..."
+NEW,,,"#bdd447","#1538c2","IPÊ: Isso, e aí precisa analisar as interações entre esses organismos e o ambiente."
+NEW,,,"#d40fec","#2238d9","IPÊ: Ah! E precisamos fotografar também."
+NEW,,,"#be964e","#135f56","PLAYER: Não parece ser muito complexo, se a gente pegar pra fazer, acho que a gente mata em um dia."
+NEW,,,"#6015c0","#7f78df","IPÊ: Talvez a parte de encontrar as espécies sim, mas isso de identificar parece difícil."
+NEW,,,"#2c9222","#d3b819","Confio no nosso potencial, vai ser tranquilo."
+NEW,,,"#ae30d4","#636019","Se você ficar falando assim, ai é que não vai dar certo mesmo."
+NEW,,,"#b29f3e","#300638","IPÊ: Se você diz..."
+NEW,,,"#bc3207","#3dfa4c","PLAYER: Quando você acha que a gente vai conseguir se encontrar?"
+NEW,,,"#e99911","#cb6024","PLAYER: Sei que Botânica em geral é um curso mais pesado que Biologia, então se você me falar como estão seus horários..."
+NEW,,,"#46bea5","#559ae6","IPÊ: Agora no começo do semestre acho que as matérias ainda estarão tranquilas."
+NEW,,,"#bd6bfa","#1bd02e","IPÊ: Você estaria livre amanhã à tarde?"
+NEW,,,"#d17583","#f61c78","PLAYER: Tô sim!"
+NEW,,,"#7fc058","#3858e8","PLAYER: Agora é só ter algum lugar no campus que a gente consiga achar algumas espécies fácil."
+NEW,,,"#176fce","#ee9d72","IPÊ: Provavelmente o pátio deve ser o melhor lugar."
+NEW,,,"#8d9869","#c312f3","PLAYER: Não tem um parque aqui perto do campus?"
+NEW,,,"#9fd63d","#9b1acf","IPÊ: O professor disse que precisava ser do campus, não perto."
+NEW,,,"#1362a0","#f6b443","Facilita a nossa vida."
+NEW,,,"#c4d55a","#b2e7ba","IPÊ: Exatamente!"
+NEW,,,"#0ee4c3","#2af43f","Poxa, queria tanto ir conhecer o parque."
+NEW,,,"#7ed498","#7f0101","IPÊ: É lindo, você deveria aproveitar quando puder ir!"
+NEW,,,"#e39539","#e4e1b2","PLAYER: Deve ser a forma dele forçar a gente a conhecer o campus, né?"
+NEW,,,"#ad8031","#7618fa","IPÊ: Eu não tinha pensado nisso, mas talvez seja algo assim."
+NEW,,,"#289c69","#c2aa91","PLAYER: Você tem alguma outra ideia de lugar?"
+NEW,,,"#d3484b","#57d9c7","IPÊ: Bom, eu sei que tem uma área verde no pátio, a gente podia se encontrar lá."
+NEW,,,"#b73731","#0c9e89","PLAYER: Por mim tá ótimo!"
+NEW,,,"#a26427","#68dae2","PLAYER: Me dei bem, você pelo visto até que conhece o campus, apesar de estar perdide mais cedo, haha."
+NEW,,,"#553160","#48bb78","IPÊ: Ah, tenho parentes aqui, então já visitei algumas vezes..."
+NEW,,,"#19f26c","#0d8790","Ipê está evitando olhar pra você."
+NEW,,,"#350a5a","#8d60bf","IPÊ: Eu preciso ir indo agora, minha segunda aula começa daqui a pouco!"
+NEW,,,"#6cff75","#f3b6aa","Antes que você pudesse argumentar que o Professor Mamba liberou vocês uma hora mais cedo..."
+NEW,,,"#ea0357","#a54040","Ipê já estava sumindo pelo corredor..."
+NEW,,,"#b57a25","#94e1b5","..."
+NEW,,,"#def188","#b50654","PLAYER: (Será que eu falei algo errado?)"
+,,"Noon",,,
+,,"Afternoon",,,
+,,"Night",,,
