String substitutions for gender inflection in PTBR

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -119,7 +119,7 @@ NEW,,,"#069bb3","#7113fa","LOREM IPSUM"
 NEW,,,"#1e3ff3","#94e1b5","..."
 NEW,,,"#da1f8b","#219ae2","???: Ei."
 NEW,,,"#23e124","#453e3e","???: Eii!"
-NEW,,,"#28b531","#2cc32a","???: Tá ouvindo?"
+NEW,,,"#28b531","#2cc32a","???: Tá ouvindo? O cabelo <do> <meu> <amigo> é lindo."
 NEW,,,"#f5b9a9","#a7ce97","???: ..."
 NEW,,,"#5be548","#65dd94","???: Acorda!"
 NEW,,,"#850375","#cd3f5f","PLAYER: Ugh..."
