More string substitutions

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -105,7 +105,7 @@ NEW,,,"#1012d5","#a7f650","Apenas admirar o desenho que ela está fazendo."
 NEW,,,"#5092f9","#5e28b8","(VOCÊ GANHOU UMA AÇÃO BÔNUS![spr_action])[snd_click1]"
 NEW,,,"#72e405","#ba92b2","Você não consegue desviar os olhos do desenho."
 NEW,,,"#df7bd3","#bb9928","Ao ponto de que a menina te direciona um olhar rápido com a sobrancelha levantada."
-NEW,,,"#2b1dd7","#c44920","Você desvia o olhar, sentindo o rosto esquentar por ter sigo <pego>."
+NEW,,,"#2b1dd7","#c44920","Você desvia o olhar, sentindo o rosto esquentar por ter sido <pego>."
 NEW,,,"#52962f","#94c0d1","Logo o terceiro barco começa a se aproximar."
 NEW,,,"#c83b07","#943cc7","PLAYER: (Ainda bem que deu tudo certo...)"
 NEW,,,"#dc01da","#b7121f","Você entra no barco."
@@ -119,31 +119,31 @@ NEW,,,"#069bb3","#7113fa","LOREM IPSUM"
 NEW,,,"#1e3ff3","#94e1b5","..."
 NEW,,,"#da1f8b","#219ae2","???: Ei."
 NEW,,,"#23e124","#453e3e","???: Eii!"
-NEW,,,"#28b531","#2cc32a","???: Tá ouvindo? O cabelo <do> <meu> <amigo> é lindo."
+NEW,,,"#28b531","#2cc32a","???: Tá ouvindo?"
 NEW,,,"#f5b9a9","#a7ce97","???: ..."
 NEW,,,"#5be548","#65dd94","???: Acorda!"
 NEW,,,"#850375","#cd3f5f","PLAYER: Ugh..."
-NEW,,,"#d58fe3","#51164b","???: Hora de levantar, <dorminhoco>!"
+NEW,,,"#d58fe3","#51164b","???: Hora de levantar, <dorminhoco>! Está <pronto>?"
 NEW,,,"#3b26df","#c90408","???: É um novo dia cheio de aventura e... Ah, pera lá, acho que você está <atrasado>!"
 NEW,,,"#baf757","#423128","Você geme e esfrega os olhos, tentando entender a situação."
 NEW,,,"#1f91d5","#51922f","Parece que seu despertador não tocou..."
-NEW,,,"#ca02fd","#5a70bd","Quem lhe acorda é seu colega de quarto, Mandacaru. Mas todos o chamam de Caru, seu apelido."
+NEW,,,"#ca02fd","#5a70bd","Quem lhe acorda é seu colega de quarto, Mandacaru.\nMas todos o chamam de Caru, seu apelido."
 NEW,,,"#adf0ed","#e65cde","PLAYER: Que horas são?"
 NEW,,,"#2278c0","#a63be9","CARU: Vou te falar, você dormiu demais, PLAYER."
-NEW,,,"#d433df","#ae9640","CARU: O sol já está alto no céu, os pássaros estão zombando de você."
-NEW,,,"#ccd329","#b75621","CARU: E eu fui o enviado do universo para lhe repassar um memorando com sermões de pontualidade."
+NEW,,,"#d433df","#ae9640","CARU: O Sol já está alto no céu, os pássaros estão zombando de você."
+NEW,,,"#ccd329","#b75621","CARU: E eu fui o enviado do universo para lhe repassar um sermão de pontualidade."
 NEW,,,"#74f4de","#2b2b7f","PLAYER: Pera, o que?? O que isso significa?"
 NEW,,,"#2be4d7","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
 NEW,,,"#774550","#137650","PLAYER: Tch. Obrigado pelo alerta, mestre dos magos. Eu só perguntei mesmo o horário!"
-NEW,,,"#30b5af","#fdfb4b","CARU: Estou exagerando, haha. São só 6h40... Seu despertador não tocou ainda."
+NEW,,,"#30b5af","#fdfb4b","CARU: Estou exagerando, foi mal. São só 6h40... Seu despertador não tocou ainda."
 NEW,,,"#7959e9","#924cd2","PLAYER: Ah! Seu sacana."
 NEW,,,"#753014","#6d343f","Você estava realmente ficando <desesperado> aqui. Caru e sua zoeira sem limites..."
-NEW,,,"#d06990","#fbc47b","CARU: A vida é uma corrida e você já começou o dia a correr! Vai me agradecer mais tarde haha."
+NEW,,,"#d06990","#fbc47b","CARU: A vida é uma corrida e você já começou o dia correndo! Vai me agradecer mais tarde. Ha-ha!"
 NEW,,,"#acdf43","#76287f","CARU: Mas agora, falo sério. O primeiro dia não é um daqueles que você vai querer se atrasar."
 NEW,,,"#1dd87f","#13fa94","CARU: Quão mais cedo você sair, melhor!"
 NEW,,,"#f2cb8c","#825ae5","CARU: Alguns dos professores da Lótus podem ser uns carrascos."
 NEW,,,"#a61151","#17f9af","PLAYER: Eu bem que estou desde o início questionando o sadismo daqueles que decidiram o horário de 7h30 pras aulas matinais..."
-NEW,,,"#2b3bb1","#8568f9","Apesar do aviso de Mandacaru, até você encontrar todos os materiais para as aulas, você viu que o tempo continuava passando."
+NEW,,,"#2b3bb1","#8568f9","Apesar do aviso do Caru, até você encontrar todos os materiais para as aulas, já havia passado uns 20 minutos."
 NEW,,,"#8cf063","#93e668","Parte de você amaldiçoa o seu eu da noite anterior que falou que com certeza ia dar tempo de se organizar de manhã."
 NEW,,,"#d53c5c","#ec502d","Estando <pronto> para sair, você se direciona para o andar de baixo do dormitório."
 NEW,,,"#fb9c05","#d61861","title: Noon"
