Updates to transition system (incomplete)

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -226,8 +226,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#eb08d9","#e32c95","O que você quer fazer?"
 ,,,"#73e84d","#4b223b","Perguntar sobre o álbum de fotos."
 ,,,"#a1b07a","#b18535","O Sr. Laranjeira entusiasticamente lhe apresenta uma variedade de famosos do campus, incluindo o tal do ''Tony Ramos''."
-,,,"#4c935d","#64063d","Além dele, vários outros famosos como ''Dalva Oliveira'', ''Mônica Carvalho''..."
-,,,"#8ab0f5","#ef1b69","A maioria você não conhece apesar, que um ou outro você lembra de ver pelos noticiários."
+,,,"#4c935d","#64063d","Além dele, váries outres famoses como ''Dalva Oliveira'', ''Mônica Carvalho''..."
+,,,"#8ab0f5","#ef1b69","A maioria você não conhece apesar, que une ou outre você lembra de ver pelos noticiários."
 ,,,"#2878d3","#29dd34","Até que você nota um bastante peculiar... ''João-Pé-de-Feijão''."
 ,,,"#40f387","#3c6ac6","PLAYER: Huh? Esse daqui me é familiar."
 ,,,"#9a219a","#aab013","LARANJEIRA: Oh, sim. Esse é o nosso primeiro reitor da Lótus. Existem várias lendas sobre ele."
