Road to fix html5 bug with layer_background_index

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -238,6 +238,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#1419ef","#606769","LARANJEIRA: Posso lhe contar a lenda desde o início... Se você estiver com tempo."
 ,,,"#a6e132","#7cc852","Claro, você atiçou minha curiosidade."
 ,,,"#4359f5","#4a7245","... Era uma vez, ..."
+,,,"#9e0fa4","#94e1b5","..."
+,,,"#e25f70","#94e1b5","..."
 ,,,"#0bf19f","#5641aa","LARANJEIRA: ... um estudante notável chamado João, conhecido por sua curiosidade e amor pela agricultura."
 ,,,"#c3f160","#e7b316","LARANJEIRA: Ele habitava o antigo feudo de Lótus, muito antes dessa universidade existir."
 ,,,"#4cd139","#1cfd13","LARANJEIRA: Um dia, enquanto explorava os arredores da faculdade, ele descobriu uma semente peculiar que parecia irradiar uma aura mágica."
@@ -305,7 +307,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#ccd329","#b47e2d","CARU: E eu fui o enviado do universo para lhe repassar um sermão de pontualidade."
 ,,,"#74f4de","#2b2b7f","PLAYER: Pera, o que?? O que isso significa?"
 ,,,"#2be4d7","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
-,,,"#774550","#137650","PLAYER: Tch. <Obrigado> pelo alerta, mestre dos magos. Eu só perguntei mesmo o horário!"
+,,,"#774550","#b01acb","PLAYER: Tch. <Obrigado> pelo alerta, mestre dos magos. Eu só perguntei mesmo o horário!"
 ,,,"#30b5af","#811f29","CARU: Estou exagerando, foi mal. São só 6h40... Seu despertador não tocou ainda."
 ,,,"#7959e9","#924cd2","PLAYER: Ah! Seu sacana."
 ,,,"#753014","#6d343f","Você estava realmente ficando <desesperado>. Caru e sua zoeira sem limites..."
