--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -123,7 +123,7 @@ NEW,,,"#bb92f9","#81ea7b","Você consegue ver ao longe o barco que acabou de sai
 NEW,,,"#5a3b7b","#a40ded","Você suspira e desce humildemente as escadas até o andar principal do dormitório em um gesto de aceitação."
 NEW,,,"#7f7969","#94e1b5","..."
 NEW,,,"#b9d47b","#94e1b5","..."
-NEW,,,"#78acb8","#6912ff","Ao chegar à recepção do dormitório, você se depara com um velho baixinho com laranjas presas na barba."
+NEW,,,"#78acb8","#6912ff","Ao chegar à recepção do dormitório, você se depara com um senhor com laranjas presas na barba."
 NEW,,,"#36b3dd","#ab4e21","LARANJEIRA: Opa. Você é estudante do turno da manhã?"
 NEW,,,"#9df643","#9049a7","PLAYER: Sou sim!"
 NEW,,,"#2ad4fa","#0d86d2","LARANJEIRA: O barco acabou de sair, mas logo logo vem outro aí."
