--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -35,12 +35,9 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#93e669","#b34020","PLAYER: (Eu... venho tendo esses sonhos desde que cheguei aqui.)"
 ,,,"#40d502","#dec223","PLAYER: (Sinto como se eles estivessem tentando me dizer alguma coisa.)"
 ,,,"#eb5c58","#dec223","PLAYER: (Sinto como se eles estivessem tentando me dizer alguma coisa.)"
-,,,"#923d13","#5b99bf","PLAYER: ... Me sinto <ansioso> com o futuro.)"
-,,,"#923d13","#5b99bf","PLAYER: ... Me sinto <ansioso> com o futuro.)"
-,,,"#0c09f9","#dd1835","(... Não sei bem como me sinto sobre o futuro.)"
-,,,"#0c09f9","#dd1835","(... Não sei bem como me sinto sobre o futuro.)"
-,,,"#718328","#1bf4a6","PLAYER: ... Me sinto <animado> com o futuro.)"
-,,,"#718328","#1bf4a6","PLAYER: ... Me sinto <animado> com o futuro.)"
+,,,"#923d13","#5b99bf","... (Me sinto <ansioso> com o futuro.)"
+,,,"#0c09f9","#dd1835","... (Não sei bem como me sinto sobre o futuro.)"
+,,,"#718328","#1bf4a6","... (Me sinto <animado> com o futuro.)"
 ,,,"#946fec","#a982ad","PLAYER: (Pra falar a verdade, eu não sei porque vim pra cá.)"
 ,,,"#c55ee5","#dfb5b0","PLAYER: (Hum, ok. Na verdade eu sei.)"
 ,,,"#fb09c6","#e0b07d","PLAYER: (Eu estava <perdido>. Sem propósito. Sem vontade de aceitar que preciso escolher algo.)"
@@ -450,10 +447,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#be964e","#9f80fc","PLAYER: Não parece ser muito complexo, se a gente pegar pra fazer, acho que a gente mata em um dia."
 ,,,"#6015c0","#6342ca","IPÊ: Talvez a parte de encontrar as espécies sim, mas isso de identificar parece difícil..."
 ,,,"#d6d407","#6342ca","IPÊ: Talvez a parte de encontrar as espécies sim, mas isso de identificar parece difícil..."
-,,,"#2c9222","#4a625a","PLAYER: Confio no nosso potencial, vai ser tranquilo."
-,,,"#2c9222","#4a625a","PLAYER: Confio no nosso potencial, vai ser tranquilo."
-,,,"#ae30d4","#ff8b4d","PLAYER: Se você ficar falando assim, ai é que não vai dar certo mesmo."
-,,,"#ae30d4","#ff8b4d","PLAYER: Se você ficar falando assim, ai é que não vai dar certo mesmo."
+,,,"#2c9222","#4a625a","Confio no nosso potencial, vai ser tranquilo."
+,,,"#ae30d4","#ff8b4d","Se você ficar falando assim, ai é que não vai dar certo mesmo."
 ,,,"#b29f3e","#5f3e4e","IPÊ: Se você diz..."
 ,,,"#bc3207","#d2631f","PLAYER: Quando você acha que a gente vai conseguir se encontrar?"
 ,,,"#e99911","#fcf2b4","PLAYER: Sei que Botânica em geral é um curso mais pesado que Biologia, então se você me falar como estão seus horários..."
