--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -270,7 +270,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#77829f","#cee2a8","PLAYER: Pô, foi surpreendentemente tranquilo, na verdade?"
 ,,,"#6326b2","#a3dd25","PLAYER: Tem muita gente, tem muitos lugares e eu ainda estou um pouco <confuso> com tudo que está acontecendo."
 ,,,"#a16d02","#cfaf8e","PLAYER: Mas foi até legal, nada realmente estressante aconteceu..."
-,,,"#23fa24","#f4a5c6","CARU: Ah, a felicidade de ser um calouro, eu sinto falta.."
+,,,"#23fa24","#f4a5c6","CARU: Ah, a felicidade de ser um calouro, eu sinto falta..."
 ,,,"#7cd0c8","#49e4a8","PLAYER: Você tá perto de formar, né?"
 ,,,"#9d7714","#db32b1","CARU: Sétimo semestre, a liberdade tão perto que quase sinto o gosto dela nos meus lábios."
 ,,,"#dab9a2","#73c80d","PLAYER: Seu curso não pode ser tão ruim assim, vai."
@@ -419,7 +419,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#54d52d","#c6249e","PLAYER: Ah, é? E quem terá o prazer de te ouvir pela terceira vez?"
 ,,,"#250ef9","#e7149b","CRAVO: Minha incrível namorada."
 ,,,"#418ead","#40aeba","CRAVO: Ela até fez a matéria semestre passado pra ver o quão ruim realmente era."
-,,,"#1c2f46","#678402","PLAYER: E pra ela não estar aqui esse semestre… Ela desistiu ou passou?"
+,,,"#1c2f46","#678402","PLAYER: E pra ela não estar aqui esse semestre... Ela desistiu ou passou?"
 ,,,"#02d535","#bc5ea0","CRAVO: Ela passou..."
 ,,,"#ef8d9b","#d56244","CRAVO: Não que ela me deixe esquecer que ela passou."
 ,,,"#e0389e","#9b98b3","PLAYER: Ah, poxa. Pelo menos ela vai te entender melhor que ninguém."
@@ -466,7 +466,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#15d9c5","#4a0f87","IPÊ: Nesse caso, acho que a nossa melhor opção vai ser o lago."
 ,,,"#a81535","#7027e1","Pelo menos não vamos ter que ir muito longe..."
 ,,,"#c4d55a","#45b6a9","IPÊ: Exatamente!"
-,,,"#0ee4c3","#6fd6d7","Yep. Sim... Mas eu também adoraria dar uma olhada no parque algum dia."
+,,,"#0ee4c3","#6fd6d7","Sim... Mas eu também adoraria dar uma olhada no parque algum dia."
 ,,,"#7ed498","#bf98a4","IPÊ: É lindo, você deveria aproveitar quando puder ir!"
 ,,,"#e39539","#b8489e","PLAYER: Afinal, eu andei pensando... Isso tudo deve ser a forma dele forçar a gente a conhecer o campus, né?"
 ,,,"#ad8031","#e49743","IPÊ: Eu não tinha pensado nisso, mas talvez seja algo assim."
