Songs now fade in and updated some sprite origins

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -317,12 +317,12 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#82985e","#3c9c70","Elu não parece perceber que você se aproxima."
 ,,,"#afa810","#8f6619","???: Hã... Qual será...?"
 ,,,"#aa73b1","#9f62c5","PLAYER: Precisa de ajuda? "
-,,,"#b8da57","#253300","IPÊ: [shake]Ah!![/]"
+,,,"#b8da57","#253300","???: [shake]Ah!![/]"
 ,,,"#57f3e7","#1d9974","PLAYER: Desculpa! Eu não queria te assustar!"
-,,,"#b29cd1","#e402f5","IPÊ: Ah...! Eu estou bem. Não se preocupe."
-,,,"#f77359","#a8237d","IPÊ: Só não esperava alguém falar comigo."
+,,,"#b29cd1","#e402f5","???: Ah...! Eu estou bem. Não se preocupe."
+,,,"#f77359","#a8237d","???: Só não esperava alguém falar comigo."
 ,,,"#50e0f2","#6579df","PLAYER:  Hum? Ok. Er... Então. Por acaso você tá procurando sua sala?"
-,,,"#24a91b","#580c4a","IPÊ: Sim... Mas esse lugar é... gigante..."
+,,,"#24a91b","#580c4a","???: Sim... Mas esse lugar é... gigante..."
 ,,,"#efbc84","#f0bcb8","PLAYER: Né, também estou um pouco <perdido>."
 ,,,"#7fa4b1","#f6e802","PLAYER: A propósito, eu me chamo PLAYER!"
 ,,,"#6055cd","#894855","PLAYER: E você? Qual o seu nome?"
@@ -334,7 +334,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#3d23a5","#2def56","PLAYER: Mas você deu sorte, eu também estou indo pra lá!"
 ,,,"#52157c","#b5ae99","PLAYER: Qual seu curso mesmo?"
 ,,,"#afce24","#3862dd","IPÊ: Ah, eu estou fazendo Botânica..."
-,,,"#a96df2","#446014","Ah, bacana! Eu sou da Biologia."
+,,,"#a96df2","#446014","PLAYER: Ah, bacana! Eu sou da Biologia."
 ,,,"#8b748c","#007ba7","Você ia propor que procurem a sala juntes, mas é <interrompide> por um senhor com uma extensa barba folheada."
 ,,,"#2bd3c0","#ad67e7","???: [snd_door]Vocês vão ficar aí parades ou vão entrar na sala?"
 ,,,"#c18e43","#0aa82c","PLAYER: Bem, a gente não sabe se essa é a nossa-"
@@ -398,7 +398,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b4f7c7","#646ca0","CRAVO: Você pegou o melhor tema!"
 ,,,"#b4fb31","#1d5808","CRAVO: Faz eu desejar que a gente tivesse sido parceiro."
 ,,,"#5a809c","#067b6d","Você sorri de leve pro Cravo antes de ir atrás de Ipê."
-,,,"#dcf068","#af37d3","ocê se direciona para perto de Ipê, se sentindo <aliviado> por pelo menos ser alguém que você já conhece minimamente."
+,,,"#dcf068","#af37d3","Você se direciona para perto de Ipê, se sentindo <aliviado> por pelo menos ser alguém que você já conhece minimamente."
 ,,,"#98ef72","#744807","Você aceno na direção delu e elu acena de volta, parecendo nervose."
 ,,,"#84b4af","#53c34e","Professor Mamba termina de anunciar as duplas."
 ,,,"#38b535","#7d3353","MAMBA: Por hoje vai ser isso!"
