--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -372,7 +372,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#b20101","#ecf253","PLAYER: (Como que você sabia exatamente o que ele ia falar?)"
 ,,,"#50157e","#b45fe3","CRAVO: Ele falou exatamente a mesma coisa nos últimos dois semestres."
 ,,,"#dd8156","#674b7b","PLAYER: E como você sabe disso?"
-,,,"#19ae6d","#38b377","CRAVO: É a terceira vez que eu estou pegando essa matéria... Ele fala isso todo semestre."
+,,,"#19ae6d","#38b377","CRAVO: É a terceira vez que eu estou pegando essa matéria..."
 ,,,"#60404c","#95cfda","PLAYER: Ahh... Essa matéria é tão pesada assim?"
 ,,,"#e496b7","#ea3d1c","CRAVO: É a pior de todas, o Mamba é um dos maiores carrascos do departamento."
 ,,,"#e18a21","#a35433","Você volta a olhar pro professor, tentando tirar suas próprias conclusões."
@@ -387,7 +387,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#74d80a","#b791cf","Acho que concordo com você."
 ,,,"#2bd5dd","#b41ed3","PLAYER: Ainda mais depois do jeito que ele falou comigo agora a pouco."
 ,,,"#12f630","#363385","CRAVO: Ele não tem a menor sensibilidade, mesmo que a maioria da turma seja caloura."
-,,,"#da122a","#95633e","PLAYER: Aposto que é por causa de pessoas como ele que tem gente que odeia Biologia"
+,,,"#da122a","#95633e","PLAYER: Aposto que é por causa de pessoas como ele que tem gente que odeia Biologia."
 ,,,"#419d85","#0ed82f","CRAVO: Err, Ecologia não é lá a matéria mais legal."
 ,,,"#1d9384","#07036b","PLAYER: Você tá brincando! É uma das matérias que eu mais estava <ansioso> pra ter."
 ,,,"#d1fdea","#ff8636","CRAVO: Entomologia é muito mais massa, espera seu próximo semestre."
