Small fixes based on feedback

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -283,7 +283,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#110ffe","#b894ad","CARU: É muito complexo pra pessoas normais entenderem."
 ,,,"#55c6cd","#d7a1e3","CARU: Mas todas as pessoas minimamente estudadas acabam aplicando isso pro curso delas sem nem precisar estudar tanto quanto a gente na graduação."
 ,,,"#727137","#cf255b","PLAYER: Uou, vai lá, fala sua verdade!"
-,,,"#37d313","#d14909","CARU: Eu precisava botar pra fora, por que meu deus."
+,,,"#37d313","#d14909","CARU: Eu precisava botar pra fora, porque meu deus."
 ,,,"#b90898","#fc6a38","PLAYER: Pelo menos as pessoas são legais?"
 ,,,"#b78db5","#b3da37","CARU: Podia ser pior."
 ,,,"#b2e702","#2ae13d","CARU: Mas não compensa o inferno que é o curso."
@@ -344,7 +344,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#880432","#cf20ab","Cada vez que você é <interrompido>, Ipê parece ficar mais envergonhade."
 ,,,"#23500b","#8d0b4a","???: O que estão esperando? Podem entrar antes de mim."
 ,,,"#fcc971","#63f80f","Essa foi a deixa pra Ipê entrar na sala o mais rápido possível."
-,,,"#ac25b9","#870f38","E você vai logo atrás delu, não querendo mais ser vítima do mal humor do professor."
+,,,"#ac25b9","#870f38","E você vai logo atrás delu, não querendo mais ser vítima do mau humor do professor."
 ,,,"#7f7969","#94e1b5","..."
 ,,,"#b9d47b","#94e1b5","..."
 ,,"CloveIntro",,,
