New music and some fixes

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -439,7 +439,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#ce42e2","#c62f1b","Quem lhe acorda é seu colega de quarto, Mandacaru.\nMas todos o chamam de Caru, seu apelido."
 ,,,"#06d03e","#e65cde","PLAYER: Que horas são?"
 ,,,"#56a124","#a63be9","CARU: Vou te falar, você dormiu demais, PLAYER."
-,,,"#b2f2be","#c2f8df","CARU: O Sol já está alto no céu, os pássaros estão zombando de você."
+,,,"#b2f2be","#ae9640","CARU: O sol já está alto no céu, os pássaros estão zombando de você."
 ,,,"#b7f2b5","#b47e2d","CARU: E eu fui o enviado do universo para lhe repassar um memorando com sermões de pontualidade."
 ,,,"#47bb20","#9bdf61","PLAYER: Pera, o que?? O que isso significa?"
 ,,,"#224a6d","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
@@ -645,9 +645,9 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#93e669","#b34020","PLAYER: (Eu... venho tendo esses sonhos desde que cheguei aqui.)"
 ,,,"#40d502","#dec223","PLAYER: (Sinto como se eles estivessem tentando me dizer alguma coisa.)"
 ,,,"#eb5c58","#dec223","PLAYER: (Sinto como se eles estivessem tentando me dizer alguma coisa.)"
-,,,"#923d13","#84df5f","... (I feel anxious about the future.)"
+,,,"#923d13","#84df5f","... (Me sinto <ansioso> em relação ao futuro.)"
 ,,,"#0c09f9","#dd1835","... (Não sei bem como me sinto sobre o futuro.)"
-,,,"#718328","#dd5020","... (I feel excited about the future.)"
+,,,"#718328","#dd5020","... (Estou <animado> com o futuro.)"
 ,,,"#946fec","#a982ad","PLAYER: (Pra falar a verdade, eu não sei porque vim pra cá.)"
 ,,,"#c55ee5","#dfb5b0","PLAYER: (Hum, ok. Na verdade eu sei.)"
 ,,,"#fb09c6","#e0b07d","PLAYER: (Eu estava <perdido>. Sem propósito. Sem vontade de aceitar que preciso escolher algo.)"
@@ -705,7 +705,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#ca02fd","#c62f1b","Quem lhe acorda é seu colega de quarto, Mandacaru.\nMas todos o chamam de Caru, seu apelido."
 ,,,"#adf0ed","#e65cde","PLAYER: Que horas são?"
 ,,,"#2278c0","#a63be9","CARU: Vou te falar, você dormiu demais, PLAYER."
-,,,"#d433df","#c2f8df","CARU: O Sol já está alto no céu, os pássaros estão zombando de você."
+,,,"#d433df","#ae9640","CARU: O sol já está alto no céu, os pássaros estão zombando de você."
 ,,,"#ccd329","#b47e2d","CARU: E eu fui o enviado do universo para lhe repassar um memorando com sermões de pontualidade."
 ,,,"#74f4de","#2b2b7f","PLAYER: Pera, o que?? O que isso significa?"
 ,,,"#2be4d7","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
