Phone UI assets (part1)

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -585,7 +585,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#9c2235","#a1e14a","CRAVO: É o segundo semestre que meu parceiro de grupo não aparece..."
 ,,,"#928e21","#dcf56b","CRAVO: O velho tá totalmente me marcando..."
 ,,,"#ad5d08","#21b3cc","PLAYER: Não é pra tanto, vai."
-,,,"#af96fa","#3694e3","PLAYER: Você tem pelo o menos alguma dica pra calouro de primeira viagem?"
+,,,"#af96fa","#3694e3","PLAYER: Você tem pelo menos alguma dica pra calouro de primeira viagem?"
 ,,,"#31e349","#0edb8b","CRAVO: Não deixe acumular e reza pro seu parceiro aparecer."
 ,,,"#43ed86","#d26144","CRAVO: Agora, se você me der licença, eu tenho que ir reclamar dessa aula pra outra pessoa."
 ,,,"#9e8c3e","#c6249e","PLAYER: Ah, é? E quem terá o prazer de te ouvir pela terceira vez?"
@@ -1029,7 +1029,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#4ba2e5","#a1e14a","CRAVO: É o segundo semestre que meu parceiro de grupo não aparece..."
 ,,,"#5a0cbd","#dcf56b","CRAVO: O velho tá totalmente me marcando..."
 ,,,"#859809","#a54690","PLAYER: Não é pra tanto, vai."
-,,,"#4485fa","#3694e3","PLAYER: Você tem pelo o menos alguma dica pra calouro de primeira viagem?"
+,,,"#4485fa","#3694e3","PLAYER: Você tem pelo menos alguma dica pra calouro de primeira viagem?"
 ,,,"#21b32f","#0edb8b","CRAVO: Não deixe acumular e reza pro seu parceiro aparecer."
 ,,,"#0d5a58","#d26144","CRAVO: Agora, se você me der licença, eu tenho que ir reclamar dessa aula pra outra pessoa."
 ,,,"#54d52d","#c6249e","PLAYER: Ah, é? E quem terá o prazer de te ouvir pela terceira vez?"
