--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -515,8 +515,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#2851de","#04f548","IPÊ: Introdução à Ecologia..."
 ,,,"#ffcb3d","#dc2511","PLAYER: Você deu sorte, ela é bem ali!"
 ,,,"#223848","#17a96b","PLAYER: Qual seu curso mesmo?"
-,,,"#85fbf8","#ca2f84","IPÊ: Ah, eu estou fazendo Botânica..."
-,,,"#174bf0","#ef4817","PLAYER: Ah, bacana! Eu sou da Biologia."
+,,,"#85fbf8","#ca2f84","IPÊ: Err, eu estou fazendo Botânica..."
+,,,"#174bf0","#ef4817","PLAYER: Hum, bacana! Eu sou da Biologia."
 ,,,"#e51982","#6e34eb","Vocês andam juntes até a sala, entrando nela."
 ,,"CloveIntro",,,
 ,,,"#6d40ef","#94e1b5","..."
