elo/delo correction lol

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -389,7 +389,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#1a1e86","#db6d70","Eu não tenho nem como defender meu curso."
 ,,,"#7db6d3","#123204","CRAVO: Ei!"
 ,,,"#8ce76d","#dbb5e3","ROSA: Viu, até <x> <calouro> <preferido> concorda comigo."
-,,,"#da3f81","#b376e5","CRAVO: <Ele> é <x> <único> <calouro> que eu conversei direito até agora!"
+,,,"#da3f81","#b376e5","CRAVO: Oxe... Mas <ele> é <x> <único> <calouro> que eu conversei direito até agora!"
 ,,,"#c4c086","#56f917","ROSA: Nem foi uma decisão totalmente minha, foi da reitoria."
 ,,,"#7b4093","#99bb91","ROSA: A gente conseguiu fazer com que a calourada fosse no pátio, desde que ninguém envolvido com o incidente do semestre passado fizesse parte do comitê."
 ,,,"#ee6f9e","#2d5b4c","PLAYER: E quando que vai ser a Calourada?"
