Updated CharacterOnScreen() function

--- a/datafiles/lang/pt_dialogues.csv
+++ b/datafiles/lang/pt_dialogues.csv
@@ -456,8 +456,8 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#06d03e","#e65cde","PLAYER: Que horas são?"
 ,,,"#56a124","#a63be9","CARU: Vou te falar, você dormiu demais, PLAYER."
 ,,,"#b2f2be","#ae9640","CARU: O sol já está alto no céu, os pássaros estão zombando de você."
-,,,"#b7f2b5","#b47e2d","CARU: E eu fui o enviado do universo para lhe repassar um memorando com sermões de pontualidade."
-,,,"#47bb20","#9bdf61","PLAYER: Pera, o que?? O que isso significa?"
+,,,"#b7f2b5","#b47e2d","CARU: E eu fui o enviado do universo pra te dar uma bronca sobre pontualidade."
+,,,"#47bb20","#9bdf61","PLAYER: Pera, que?? O que isso significa?"
 ,,,"#224a6d","#142ea1","Você se apressa com a escolha de roupa, e de forma atrapalhada, tenta se vestir em tempo recorde."
 ,,,"#f2bdb2","#0f44e0","PLAYER: Tsk. <Obrigado> pelo alerta, mestre dos magos. Eu só perguntei o horário!"
 ,,,"#f49f67","#7626d3","CARU: Estou exagerando, foi mal. São só 6h40... Seu despertador não tocou ainda."
@@ -467,7 +467,7 @@ Status,File,Node,Line ID,Hash,Text
 ,,,"#599f31","#95d83a","CARU: Mas agora, falo sério. O primeiro dia não é um daqueles que você vai querer atrasar."
 ,,,"#b16336","#318056","CARU: Quão mais cedo você sair, melhor!"
 ,,,"#eb765d","#81b385","CARU: Alguns dos professores da Lótus podem ser uns carrascos."
-,,,"#0801c0","#c115fe","PLAYER: Eu bem que estou desde o início questionando o sadismo daqueles que decidiram o horário de 7h30 pras aulas matinais..."
+,,,"#0801c0","#c115fe","PLAYER: Eu bem que tô questionando o sadismo de quem decidiu marcar aula pras 7h30 da manhã..."
 ,,,"#40b930","#8a5ede","Apesar do aviso do Caru, até você encontrar todos os materiais para as aulas, já havia passado uns 20 minutos."
 ,,,"#3c926a","#3c0ee7","Parte de você amaldiçoa o seu eu da noite anterior que falou que com certeza ia dar tempo de se organizar de manhã."
 ,,,"#73cb8a","#40ad6c","Estando <pronto> para sair, você se direciona para o andar de baixo do dormitório."
